--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Proyecto de sitios web Periodo 2021 16-01</h1>
     <h3>Nombre Arthur Chavarro Collazos <br> 
         Programa Fase 1 Planeacion <br>
-        fecha de creacion 12-02-2021 <br>
+        fecha de creacion 12-02-2021 
     </h3>
     <p>
         Datos de contactos <br>
         Correo electronico- Turrock64@outlook.com <br>
         Skype- turro64_1 <br>
         WhatsApp- 3177096024 <br>
-        correo institucional- achavarroco@unad.edu.co <br>
+        correo institucional- achavarroco@unad.edu.co 
 
     </p>
 </body>
