--- a/fase2/design.html
+++ b/fase2/design.html
@@ -36,9 +36,20 @@
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
             Commodi officia soluta ipsam debitis laboriosam modi cupiditate incidunt eum numquam fuga quisquam tenetur blanditiis ut,><br>
-             nostrum aliquid optio deserunt quo. Optio.
+             nostrum aliquid optio deserunt quo. Optio.<br>
+             Etiquetas Básicas de HTML, atributos y valores.<br>
+             <br>
+             Las etiquetas son como la estructura básica del html estas etiquetas o tags se componen y contienen<br>
+             otras propiedades, como son los atributos y el contenido.<br>
+             <br>
+             Algunas de las etiquetas básicas son:<br>
+             <br>
+             <br>
+             <html>: la cual indica el comienzo del documento HTML<br>
+             <br>
              <h6>Referencias APA </h6>
         </p>
+        <img src="Nombre de la imagen" alt="el mockup">
     </article>
     <footer>
         <h6>Este es mi pie de pagina</h6>
