--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
         Correo electronico- Turrock64@outlook.com <br>
         Skype- turro64_1 <br>
         WhatsApp- 3177096024 <br>
-        correo institucional- achavarroco@unad.edu.co 
+        correo institucional- achavarroco@unad.edu.co <br>
+        <br>
+        Aprendizaje:<br>
+        <br>
+
+        <a href="index.html">Actividad Fase 1</a>
+        <hr>
+        <a href="fase2/design.html">Actividad Fase 2</a>
+
 
     </p>
 </body>
