--- a/fase2/design.html
+++ b/fase2/design.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etiquetas Basicas de HTML, atributos y valores</title>
+    <title>Etiquetas Basicas de HTML, atributos y valores.</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
     <section>
         <h1>Sitio web para el aprendizaje de las Etiqutas Basicas de html, atributos y valores </h1>
         <p> <b>Sistio tiene como proposito formentar el aprendizaje de las <br>
-            tematicas correspondientes a las etiquetas basicas, atribtos y valores de HTML</b></p>
+            tematicas correspondientes a las etiquetas basicas, atribtos y valores de HTML.</b></p>
              <br>
              <img src="Imghtml/html.jpg" alt="html">
                  
