--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         Aprendizaje:<br>
         <br>
 
-        <a href="index.html">Actividad Fase 1</a>
+        <a href="index.html">Actividad Fase 1.</a>
         <hr>
-        <a href="fase2/design.html">Actividad Fase 2</a>
+        <a href="fase2/design.html">Actividad Fase 2.</a>
 
 
     </p>
