--- a/fase2/design.html
+++ b/fase2/design.html
@@ -13,31 +13,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">inicio</a></li>
-                <li>
+                    <a href="">inicio</a>
+                </li>
                 <li>Temas</li>
                 <ul>
                     <li><a href="design.html">tema 1</a></li>
                     <li><a href="design.html">tema 2</a></li>
-                    <li>
-                 <li>aprendizaje</li>
-                    <ul>
-                    <li><a href="design.html">tema 1</a></li>
-                     <li><a href="design.html">tema 2</a></li>
-
                 </ul>
-
+                <li>aprendizaje</li>
+                <ul>
+                    <li><a href="design.html">tema 1</a></li>
+                    <li><a href="design.html">tema 2</a></li>
+                </ul>
                 <li>Recursos digitales</li>
                 <ul>
                     <li><a href="Imghtml/html.jpg">Recurso 1</a></li>
                     <li><a href="Img/Mockup.PNG">Recurso 2</a></li>
-                    <ul>   
                 </ul>
-
                 <li>Acerca del </li>
                 <ul>
                     <li><a href="design.html">autor</a></li>
                 </ul>
+            </ul>
         </nav>
     </header>
     <section>
