--- a/fase3/multimedia 2.html
+++ b/fase3/multimedia 2.html
@@ -17,7 +17,7 @@
     <nav>
 
         <ul>
-            <li> <a href="index.html">Inicio</a> </li>
+            <li> <a href="index.html">Inicio.</a> </li>
             <li><a href="#">temas</a>
                 <ul class="dropdown-1">
                     <li><a href="tema 1.html">tema1</a></li>
@@ -30,7 +30,7 @@
                     <li><a href="multimedia 2.html">Recurso 2</a></li>
                 </ul>
             </li>
-            <li><a href="#">Aprendizaje</a>
+            <li><a href="#">Aprendizaje.</a>
                 <ul class="dropdown-1">
                     <li> <a href="#">Aprendizaje 1</a> </li>
                     <li><a href="#">Aprendizaje 2</a></li>
