--- a/fase3/index.html
+++ b/fase3/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Etiquetas basicas de HTML, atributos y valores</h1>
+        <h1>Etiquetas basicas de HTML, atributos y valores.</h1>
     </header>
     <nav>
 
